# tg_bot_shop

./: .env.example  README.md  bot.py  bot_commands_list.py  config.py  pyproject.toml
app/: admin.py  handlers.py  keyboards.py
app/database/: engine.py  models.py  requests.py
app/filters/: chat_type_filter.py
app/handlers/: admin_handlers.py  group_handlers.py  user_group.py  user_handlers.py
app/keyboards/: keyboards_creater.py  reply_keyboards.py
app/logging/: logger.py
app/middlewares/: db.py
database/: models.py
tg_bot_api/: pyproject.toml
tg_bot_api/bot_api/: .env.example  bot.py  config.py  env  env.example
tg_bot_api/bot_api/database/: models.py
