[tool.poetry]
name = "tg-bot-api"
version = "0.1.0"
description = ""
authors = ["Noir_Egoiste <dmitreykyrchin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
aiologger = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
